add two new pages

--- a/list_of_recruiter.html
+++ b/list_of_recruiter.html
@@ -642,7 +642,7 @@
                         A record 1309 students were placed in a single day by Accenture, a Fortune 500 Company.
                     </div>
 
-                    <img src="/public/images/shape/underline-2.png" alt="" class="img-fluid"
+                    <img src="public/images/shape/underline-2.png" alt="" class="img-fluid"
                         style="position: absolute; bottom: -50px; right: 0;z-index: 1;opacity: 0.9; width: 30%;" />
 
                 </div>
@@ -654,7 +654,7 @@
                 <!-- Finance -->
                 <div class="col-md-12 col-md-12 col-lg-12 col-xl-12 py-2">
                     <h3 class="text-center text-light seri-f yellowGradient ">Finance</h3>
-                    <div class="bullet_box pt-5 pb-5">
+                    <div class="bullet_box pt-sm-5 pb-5">
                         <ul>
                             <li>Axis Bank</li>
                             <li>Beacon Insurance Brokers</li>
@@ -694,7 +694,7 @@
                 </div>
                 <div class="col-md-12 col-md-12 col-lg-12 col-xl-12 py-2">
                     <h3 class="text-center text-light seri-f yellowGradient">International Business :</h3>
-                    <div class="bullet_box pt-5 pb-5">
+                    <div class="bullet_box pt-sm-5 pb-5">
                         <ul>
                             <li>Airports Authority of India</li>
                             <li>C&S Electric Limited</li>
@@ -716,7 +716,7 @@
                 <!-- Human Resource -->
                 <div class="col-md-12 col-md-12 col-lg-12 col-xl-12 py-2">
                     <h3 class="text-center text-light seri-f yellowGradient">Human Resource :</h3>
-                    <div class="bullet_box pt-5 pb-5">
+                    <div class="bullet_box pt-sm-5 pb-5">
                         <ul>
                             <li>Apollo Hospitals</li>
                             <li>Everest Industries Ltd</li>
@@ -740,7 +740,7 @@
                 </div>
                 <div class="col-md-12 col-md-12 col-lg-12 col-xl-12 py-2">
                     <h3 class="text-center text-light seri-f yellowGradient">Operations :</h3>
-                    <div class="bullet_box pt-5 pb-5">
+                    <div class="bullet_box pt-sm-5 pb-5">
                         <ul>
                             <li>Airtel</li>
                             <li>Convergys</li>
@@ -766,7 +766,7 @@
                 <!-- Marketing -->
                 <div class="col-md-12 col-md-12 col-lg-12 col-xl-12 py-2">
                     <h3 class="text-center text-light seri-f yellowGradient">Marketing :</h3>
-                    <div class="bullet_box pt-5 pb-5">
+                    <div class="bullet_box pt-sm-5 pb-5">
                         <ul>
                             <li>Amul</li>
                             <li>Apollo Tyres</li>
@@ -937,6 +937,202 @@
         </div>
     </section>
     <!-- testimonial area start -->
+
+
+    <!-- out top recruiter -->
+    <section class="trustedCompanies position-relative">
+        <!-- <h2 class="fw-bold text-center f-sm-20" style="padding-bottom: 20px;">
+            <span class="highlight gradient-one wow fadeInUp" data-wow-delay=".4s">Trusted </span><span
+                class="wow fadeInUp" data-wow-delay=".9s">by 500+ companies for top talent</span>
+        </h2> -->
+        <div class="container">
+            <div class="row gap-5">
+                <div class=" col-lg-5 mb-5 mb-lg-0  overflow-hidden d-flex justify-content-center flex-column">
+
+                    <h2 class="fw-bold text-center f-sm-20" style="padding-bottom: 20px;">
+                        <span class="highlight gradient-one wow fadeInUp" data-wow-delay=".4s">Trusted by</span>
+                        <span> <br>500+ companies for top talent</span>
+                    </h2>
+
+                    <!-- testimonial cards -->
+
+                    <div class="stats mt-50 my-md-1 d-flex  justify-content-around pt-50 align-items-center flex-wrap ">
+                        <div style="border-right: 2px solid grey; padding-right:30px; text-align: center;"
+                            class="wow fadeInUp" data-wow-delay=".4s">
+                            <h3 class="fw-bold mb-0">500 +</h3>
+                            <p class="mb-0">Companies</p>
+                        </div>
+                        <div style="border-right: 2px solid grey; padding-right:30px; text-align: center;"
+                            class="wow fadeInUp" data-wow-delay=".7s">
+                            <h3 class="fw-bold mb-0">500 +</h3>
+                            <p class="mb-0">Openings</p>
+                        </div>
+                        <div class="wow fadeInUp" data-wow-delay=".9s">
+                            <h3 class="fw-bold mb-0">800 +</h3>
+                            <p class="mb-0">Placements</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-5 mb-lg-0 d-none d-sm-block">
+                    <div class="grid">
+                        <ul id="hexGrid">
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/amul.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/applicate-ai-logo.png"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/bigbazaar.png"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/colacola.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/EaseMyTrip_Logo.svg"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/fedx.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/fincare.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/Godrej_Logo.png"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/HCL-logo.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/heroBgDesktop.svg"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/icici.png" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/indigologo.png"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/lava.jpg" alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="hex">
+                                <div class="hexIn">
+                                    <a class="hexLink" href="#">
+                                        <div class='img'>
+                                            <img src="public/images/companies/vodafone-logo.png"
+                                                alt="PartnerCompaniesLogo">
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-img "><img src="public/images/companies/heroBgDesktop.svg" alt="" style="width: 100%;"></div>
+    </section>
+    <!-- out top recruiter -->
 
 
     <!-- Footer -->
