add some more new pages

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             </a>
 
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Vision & Mission</a></li>
+                                <li><a href="vision&mission.html">Vision & Mission</a></li>
                                 <li><a href="admission.html">Director Speaks</a></li>
                                 <li><a href="academic-area.html">The Journey</a></li>
                                 <!-- level 2 -->
@@ -300,7 +300,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Vision & Mission</a></li>
+                            <li><a href="vision&mission.html">Vision & Mission</a></li>
                             <li><a href="admission.html">Director Speaks</a></li>
                             <li><a href="academic-area.html">The Journey</a></li>
                             <li class="mobile-dropdown">
