add somew more new pages here

--- a/alumni-engagement.html
+++ b/alumni-engagement.html
@@ -625,15 +625,18 @@
         <h2 class="text-center gradient-one wow fadeInUp" data-wow-delay=".7s">Alumni Engagement<br></h2>
         <section class="commendations">
             <div class="container">
-                <div class="row">
+                <div class="row gy-4">
                     <div class="col-sm-4">
-                        <div class="course__item mb-30 position-relative">
+                        <div class="course__item mb-3 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/banking.gif" alt="">
                                 </a>
+                                <div class="course__overlay">
+                                    
+                                </div>
                             </div>
-                            <div class="course__content p-relative">
+                            <div class="course__content position-relative">
                                 <h3 class="course__title">
                                     <a href="course-details.html">
                                         Mr. Saurabh Pathak.</a>
@@ -673,8 +676,9 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/14.jpg" alt="">
+                                    <img src="/public/images/teacher/salesee.png" alt="">
                                 </a>
+                                <div class="course__overlay"></div>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
@@ -714,7 +718,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/transs.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -757,7 +761,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/jain.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -800,7 +804,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/14.jpg" alt="">
+                                    <img src="/public/images/teacher/alum.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -841,7 +845,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/sssssssss.png" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -884,7 +888,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/cva.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -927,7 +931,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/14.jpg" alt="">
+                                    <img src="/public/images/teacher/aaaaaaaaa.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
@@ -969,7 +973,7 @@
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
                                 <a href="course-details.html">
-                                    <img src="assets/img/team/06.jpg" alt="">
+                                    <img src="/public/images/teacher/jira.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
